force-app/main/default/objects/User__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>15</length>
    <type>Text</type>
</CustomField>