force-app/main/default/objects/User__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Users (Manager)</relationshipLabel>
    <relationshipName>Users2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>