force-app/main/default/objects/User__c/fields/MobileNo__c.field-meta.xml
<CustomField>
    <fullName>MobileNo__c</fullName>
    <label>MobileNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>